--- a/frondend/package.json
+++ b/frondend/package.json
@@ -7,6 +7,7 @@
         "start": "webpack-dev-server --mode=development",
         "server": "json-server -p3001 db.json"
     },
+    "proxy": "http://localhost:3001",
     "license": "MIT",
     "devDependencies": {
         "@babel/core": "^7.6.3",
