--- a/frondend/package.json
+++ b/frondend/package.json
@@ -26,6 +26,10 @@
         "bootstrap": "^4.3.1",
         "react": "^16.10.2",
         "react-bootstrap": "^1.0.0-beta.14",
-        "react-dom": "^16.10.2"
+        "react-dom": "^16.10.2",
+        "react-redux": "^7.1.1",
+        "redux": "^4.0.4",
+        "redux-devtools-extension": "^2.13.8",
+        "redux-thunk": "^2.3.0"
     }
 }
