--- a/frondend/package.json
+++ b/frondend/package.json
@@ -28,6 +28,7 @@
         "react-bootstrap": "^1.0.0-beta.14",
         "react-dom": "^16.10.2",
         "react-redux": "^7.1.1",
+        "react-router-dom": "^5.1.2",
         "redux": "^4.0.4",
         "redux-devtools-extension": "^2.13.8",
         "redux-thunk": "^2.3.0"
