Backend: Users testing (and try to set controlles to use models)

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,11 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=production node index.js",
-    "watch": "cross-env NODE_ENV=development nodemon index.js",
-    "test": "cross-env NODE_ENV=test jest --verbose --runInBand",
+    "start": " NODE_ENV=production node index.js",
+    "watch": " NODE_ENV=development nodemon index.js",
+    "test": " NODE_ENV=test jest --verbose --runInBand",
     "lint": "eslint .",
-    "start:test": "cross-env NODE_ENV=test node index.js"
+    "start:test": " NODE_ENV=test node index.js"
   },
   "author": "Timo Tamminen",
   "license": "ISC",
