--- a/frondend/package.json
+++ b/frondend/package.json
@@ -5,7 +5,9 @@
     "scripts": {
         "build": "webpack --mode=production --history-api-fallback",
         "start": "webpack-dev-server --mode development --history-api-fallback",
-        "lint": "eslint ."
+        "lint": "eslint .",
+        "test": "jest --config ./jest.config.js",
+        "test:watch": "npm run test -- --watch"
     },
     "proxy": "http://localhost:3001",
     "license": "MIT",
@@ -14,12 +16,16 @@
         "@babel/polyfill": "^7.6.0",
         "@babel/preset-env": "^7.6.3",
         "@babel/preset-react": "^7.6.3",
+        "@testing-library/jest-dom": "^4.2.3",
+        "@testing-library/react": "^9.3.2",
         "babel-loader": "^8.0.6",
         "css-loader": "^3.2.0",
         "eslint": "^6.6.0",
         "eslint-plugin-jest": "^23.0.2",
         "eslint-plugin-react": "^7.16.0",
         "eslint-plugin-react-hooks": "^2.2.0",
+        "jest": "^24.9.0",
+        "jest-webpack": "^0.5.1",
         "style-loader": "^1.0.0",
         "webpack": "^4.41.1",
         "webpack-cli": "^3.3.9",
