--- a/frondend/package.json
+++ b/frondend/package.json
@@ -7,25 +7,34 @@
         "start": "webpack-dev-server --mode development --history-api-fallback",
         "lint": "eslint .",
         "test": "jest --config ./jest.config.js",
-        "test:watch": "npm run test -- --watch"
+        "test:watch": "npm run test -- --watch",
+        "cypress:open": "cypress open"
     },
     "proxy": "http://localhost:3001",
     "license": "MIT",
     "devDependencies": {
-        "@babel/core": "^7.6.4",
+        "@babel/core": "^7.7.2",
         "@babel/polyfill": "^7.6.0",
         "@babel/preset-env": "^7.6.3",
+        "@babel/preset-es2015": "^7.0.0-beta.53",
         "@babel/preset-react": "^7.6.3",
         "@testing-library/jest-dom": "^4.2.3",
         "@testing-library/react": "^9.3.2",
+        "babel-jest": "^24.9.0",
         "babel-loader": "^8.0.6",
+        "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
+        "babel-preset-jest": "^24.9.0",
         "css-loader": "^3.2.0",
+        "cypress": "^3.6.1",
         "eslint": "^6.6.0",
         "eslint-plugin-jest": "^23.0.2",
         "eslint-plugin-react": "^7.16.0",
         "eslint-plugin-react-hooks": "^2.2.0",
+        "html-webpack-plugin": "^3.2.0",
         "jest": "^24.9.0",
+        "jest-cli": "^24.9.0",
         "jest-webpack": "^0.5.1",
+        "react-addons-test-utils": "^15.6.2",
         "style-loader": "^1.0.0",
         "webpack": "^4.41.1",
         "webpack-cli": "^3.3.9",
