--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": " NODE_ENV=production node index.js",
-    "watch": " NODE_ENV=development nodemon index.js",
+    "watch": "cross-env NODE_ENV=development nodemon index.js",
     "test": " NODE_ENV=test jest --verbose --runInBand",
     "lint": "eslint .",
     "start:test": " NODE_ENV=test node index.js"
