--- a/frondend/package.json
+++ b/frondend/package.json
@@ -4,7 +4,7 @@
     "description": "job hunting",
     "scripts": {
         "build": "webpack --mode=production --history-api-fallback",
-        "start": "webpack-dev-server --mode development --history-api-fallback",
+        "start": "webpack-dev-server --mode=development --history-api-fallback",
         "lint": "eslint .",
         "test": "jest --config ./jest.config.js",
         "test:watch": "npm run test -- --watch",
