--- a/frondend/package.json
+++ b/frondend/package.json
@@ -41,6 +41,9 @@
         "webpack-dev-server": "^3.9.0"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^1.2.26",
+        "@fortawesome/free-solid-svg-icons": "^5.12.0",
+        "@fortawesome/react-fontawesome": "^0.1.8",
         "axios": "^0.19.0",
         "bootstrap": "^4.3.1",
         "file-loader": "^4.2.0",
