--- a/frondend/package.json
+++ b/frondend/package.json
@@ -53,8 +53,11 @@
         "react-bootstrap": "^1.0.0-beta.14",
         "react-copy-to-clipboard": "^5.0.2",
         "react-dom": "^16.12.0",
+        "react-form-validator-core": "^0.6.4",
+        "react-hook-form": "^3.29.4",
         "react-redux": "^7.1.3",
         "react-router-dom": "^5.1.2",
+        "reactjs-input-validator": "^0.16.4",
         "redux": "^4.0.4",
         "redux-devtools-extension": "^2.13.8",
         "redux-thunk": "^2.3.0",
