--- a/frondend/package.json
+++ b/frondend/package.json
@@ -2,28 +2,37 @@
     "name": "job-book",
     "version": "0.1.0",
     "description": "job hunting",
+    "jest": {
+        "rootDir": ".",
+        "verbose": true,
+        "transform": {
+          "^.+\\.jsx?$": "babel-jest",
+          ".+\\.(css|styl|less|sass|scss)$": "<rootDir>/jest/cssTransform.js"
+        }
+      },
     "scripts": {
         "build": "webpack --mode=production --history-api-fallback",
         "start": "webpack-dev-server --mode=development --history-api-fallback",
         "lint": "eslint .",
-        "test": "jest --config ./jest.config.js",
+        "test": "jest ",
         "test:watch": "npm run test -- --watch",
         "cypress:open": "cypress open"
     },
     "proxy": "http://localhost:3001",
     "license": "MIT",
     "devDependencies": {
-        "@babel/core": "^7.7.2",
         "@babel/polyfill": "^7.7.0",
         "@babel/preset-env": "^7.7.1",
         "@babel/preset-es2015": "^7.0.0-beta.53",
-        "@babel/preset-react": "^7.7.0",
+        "@babel/preset-react": "^7.7.4",
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.3.2",
         "babel-jest": "^24.9.0",
-        "babel-loader": "^8.0.6",
+        "babel-loader": "^7.1.5",
         "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
+        "babel-preset-es2015": "^6.24.1",
         "babel-preset-jest": "^24.9.0",
+        "babel-preset-react": "^6.24.1",
         "css-loader": "^3.2.0",
         "cypress": "^3.6.1",
         "enzyme": "^3.11.0",
@@ -37,16 +46,21 @@
         "jest-cli": "^24.9.0",
         "jest-webpack": "^0.5.1",
         "react-addons-test-utils": "^15.6.2",
+        "react-test-renderer": "^16.12.0",
         "style-loader": "^1.0.0",
-        "webpack": "^4.41.2",
+        "webpack": "^4.41.5",
         "webpack-cli": "^3.3.10",
-        "webpack-dev-server": "^3.9.0"
+        "webpack-dev-server": "^3.10.1"
     },
     "dependencies": {
+        "@babel/plugin-transform-react-constant-elements": "^7.7.4",
+        "@babel/plugin-transform-react-inline-elements": "^7.7.4",
         "@fortawesome/fontawesome-svg-core": "^1.2.26",
         "@fortawesome/free-solid-svg-icons": "^5.12.0",
         "@fortawesome/react-fontawesome": "^0.1.8",
         "axios": "^0.19.0",
+        "babel-plugin-transform-react-pure-class-to-function": "^1.0.1",
+        "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
         "bootstrap": "^4.3.1",
         "file-loader": "^4.2.0",
         "jquery": "^3.4.1",
