--- a/frondend/package.json
+++ b/frondend/package.json
@@ -2,31 +2,24 @@
     "name": "job-book",
     "version": "0.1.0",
     "description": "job hunting",
-    "jest": {
-        "rootDir": ".",
-        "verbose": true,
-        "transform": {
-          "^.+\\.jsx?$": "babel-jest",
-          ".+\\.(css|styl|less|sass|scss)$": "<rootDir>/jest/cssTransform.js"
-        }
-      },
     "scripts": {
         "build": "webpack --mode=production --history-api-fallback",
         "start": "webpack-dev-server --mode=development --history-api-fallback",
         "lint": "eslint .",
-        "test": "jest ",
+        "test": "jest --config ./jest.config.js --watch",
         "test:watch": "npm run test -- --watch",
         "cypress:open": "cypress open"
     },
     "proxy": "http://localhost:3001",
     "license": "MIT",
     "devDependencies": {
+        "@babel/core": "^7.7.7",
         "@babel/polyfill": "^7.7.0",
-        "@babel/preset-env": "^7.7.1",
+        "@babel/preset-env": "^7.7.7",
         "@babel/preset-es2015": "^7.0.0-beta.53",
         "@babel/preset-react": "^7.7.4",
         "@testing-library/jest-dom": "^4.2.4",
-        "@testing-library/react": "^9.3.2",
+        "@testing-library/react": "^9.4.0",
         "babel-jest": "^24.9.0",
         "babel-loader": "^7.1.5",
         "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
