--- a/frond-end-cra/package.json
+++ b/frond-end-cra/package.json
@@ -7,7 +7,6 @@
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@fortawesome/react-fontawesome": "^0.1.8",
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.1",
     "bootstrap": "^4.4.1",
@@ -52,10 +51,12 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/react": "^9.4.0",
     "cypress": "^3.8.1",
     "eslint": "^6.8.0",
     "eslint-plugin-jest": "^23.3.0",
     "eslint-plugin-react": "^7.17.0",
-    "eslint-plugin-react-hooks": "^2.3.0"
+    "eslint-plugin-react-hooks": "^2.3.0",
+    "redux-mock-store": "^1.5.4"
   }
 }
