--- a/frondend/package.json
+++ b/frondend/package.json
@@ -1,68 +1,69 @@
 {
-    "name": "job-book",
-    "version": "0.1.0",
-    "description": "job hunting",
-    "scripts": {
-        "build": "webpack --mode=production --history-api-fallback",
-        "start": "webpack-dev-server --mode=development --history-api-fallback",
-        "lint": "eslint .",
-        "test": "jest --config ./jest.config.js",
-        "test:watch": "npm run test -- --watch",
-        "cypress:open": "cypress open"
-    },
-    "proxy": "http://localhost:3001",
-    "license": "MIT",
-    "devDependencies": {
-        "@babel/core": "^7.7.2",
-        "@babel/polyfill": "^7.7.0",
-        "@babel/preset-env": "^7.7.1",
-        "@babel/preset-es2015": "^7.0.0-beta.53",
-        "@babel/preset-react": "^7.7.0",
-        "@testing-library/jest-dom": "^4.2.4",
-        "@testing-library/react": "^9.3.2",
-        "babel-jest": "^24.9.0",
-        "babel-loader": "^8.0.6",
-        "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
-        "babel-preset-jest": "^24.9.0",
-        "css-loader": "^3.2.0",
-        "cypress": "^3.6.1",
-        "enzyme": "^3.11.0",
-        "enzyme-adapter-react-16": "^1.15.2",
-        "eslint": "^6.6.0",
-        "eslint-plugin-jest": "^23.0.4",
-        "eslint-plugin-react": "^7.16.0",
-        "eslint-plugin-react-hooks": "^2.3.0",
-        "html-webpack-plugin": "^3.2.0",
-        "jest": "^24.9.0",
-        "jest-cli": "^24.9.0",
-        "jest-webpack": "^0.5.1",
-        "react-addons-test-utils": "^15.6.2",
-        "style-loader": "^1.0.0",
-        "webpack": "^4.41.2",
-        "webpack-cli": "^3.3.10",
-        "webpack-dev-server": "^3.9.0"
-    },
-    "dependencies": {
-        "@fortawesome/fontawesome-svg-core": "^1.2.26",
-        "@fortawesome/free-solid-svg-icons": "^5.12.0",
-        "@fortawesome/react-fontawesome": "^0.1.8",
-        "axios": "^0.19.0",
-        "bootstrap": "^4.3.1",
-        "file-loader": "^4.2.0",
-        "jquery": "^3.4.1",
-        "popper.js": "^1.16.0",
-        "react": "^16.12.0",
-        "react-bootstrap": "^1.0.0-beta.14",
-        "react-copy-to-clipboard": "^5.0.2",
-        "react-dom": "^16.12.0",
-        "react-form-validator-core": "^0.6.4",
-        "react-hook-form": "^3.29.4",
-        "react-redux": "^7.1.3",
-        "react-router-dom": "^5.1.2",
-        "reactjs-input-validator": "^0.16.4",
-        "redux": "^4.0.4",
-        "redux-devtools-extension": "^2.13.8",
-        "redux-thunk": "^2.3.0",
-        "url-loader": "^2.2.0"
-    }
+  "name": "job-book",
+  "version": "0.1.0",
+  "description": "job hunting",
+  "scripts": {
+    "build": "webpack --mode=production --history-api-fallback",
+    "start": "webpack-dev-server --mode=development --history-api-fallback",
+    "deploy": "aws s3 sync build/ s3://job-book --acl public-read",
+    "lint": "eslint .",
+    "test": "jest --config ./jest.config.js",
+    "test:watch": "npm run test -- --watch",
+    "cypress:open": "cypress open"
+  },
+  "proxy": "http://localhost:3001",
+  "license": "MIT",
+  "devDependencies": {
+    "@babel/core": "^7.7.2",
+    "@babel/polyfill": "^7.7.0",
+    "@babel/preset-env": "^7.7.1",
+    "@babel/preset-es2015": "^7.0.0-beta.53",
+    "@babel/preset-react": "^7.7.0",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "babel-jest": "^24.9.0",
+    "babel-loader": "^8.0.6",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
+    "babel-preset-jest": "^24.9.0",
+    "css-loader": "^3.2.0",
+    "cypress": "^3.6.1",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "eslint": "^6.6.0",
+    "eslint-plugin-jest": "^23.0.4",
+    "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-react-hooks": "^2.3.0",
+    "html-webpack-plugin": "^3.2.0",
+    "jest": "^24.9.0",
+    "jest-cli": "^24.9.0",
+    "jest-webpack": "^0.5.1",
+    "react-addons-test-utils": "^15.6.2",
+    "style-loader": "^1.0.0",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.9.0"
+  },
+  "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.26",
+    "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "@fortawesome/react-fontawesome": "^0.1.8",
+    "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
+    "file-loader": "^4.2.0",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.16.0",
+    "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.14",
+    "react-copy-to-clipboard": "^5.0.2",
+    "react-dom": "^16.12.0",
+    "react-form-validator-core": "^0.6.4",
+    "react-hook-form": "^3.29.4",
+    "react-redux": "^7.1.3",
+    "react-router-dom": "^5.1.2",
+    "reactjs-input-validator": "^0.16.4",
+    "redux": "^4.0.4",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
+    "url-loader": "^2.2.0"
+  }
 }
