--- a/frondend/package.json
+++ b/frondend/package.json
@@ -64,6 +64,7 @@
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
+    "socket.io-client": "^2.3.0",
     "url-loader": "^2.2.0"
   }
 }
