sokect jobs modify

--- a/frondend/package.json
+++ b/frondend/package.json
@@ -4,6 +4,8 @@
   "description": "job hunting",
   "scripts": {
     "start-mongo": "sudo service mongod start",
+    "stop-mongo": "sudo service mongod stop",
+    "status-mongo": "sudo service mongod status",
     "start-backend": "cd .. && cd backend && npm run watch",
     "build": "webpack --mode=production --history-api-fallback",
     "start": "webpack-dev-server --mode=development --history-api-fallback",
