--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "cross-env": "^6.0.3",
     "eslint": "^6.6.0",
+    "eslint-plugin-cypress": "^2.10.2",
     "jest": "^24.9.0",
     "nodemon": "^1.19.4",
     "supertest": "^4.0.2"
