--- a/frondend/package.json
+++ b/frondend/package.json
@@ -31,6 +31,8 @@
     "babel-preset-jest": "^24.9.0",
     "css-loader": "^3.4.2",
     "cypress": "^3.8.3",
+    "cypress-file-upload": "^3.5.3",
+    "cypress-form-data-with-file-upload": "^1.0.0",
     "eslint": "^6.6.0",
     "eslint-plugin-jest": "^23.7.0",
     "eslint-plugin-react": "^7.18.3",
